completed assignment dict

--- a/assignment3_dictsetfn.ipynb
+++ b/assignment3_dictsetfn.ipynb
@@ -128,8 +128,170 @@
    "execution_count": null,
    "id": "a2fc92b4",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'name': 'Laptop', 'price': 1200, 'stock': 45},\n",
+       " {'name': 'Mouse', 'price': 25, 'stock': 150},\n",
+       " {'name': 'Keyboard', 'price': 75, 'stock': 80}]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def update_stock(inventory,product_name,new_stock_count):\n",
+    "    \n",
+    "    for i in inventory:\n",
+    "        #print(i)\n",
+    "        if i.get('name')==product_name:\n",
+    "            i['stock']=new_stock_count\n",
+    "\n",
+    "    return inventory\n",
+    "\n",
+    "\n",
+    "inventory=[\n",
+    "    {'name': 'Laptop', 'price': 1200, 'stock': 45},\n",
+    "    {'name': 'Mouse', 'price': 25, 'stock': 150},\n",
+    "    {'name': 'Keyboard', 'price': 75, 'stock': 80}\n",
+    "]\n",
+    "product_to_update = 'Car'\n",
+    "new_stock = 125\n",
+    "update_stock(inventory,product_to_update,new_stock)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ecf0682c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'the': 3,\n",
+       " 'quick': 1,\n",
+       " 'brown': 1,\n",
+       " 'fox': 1,\n",
+       " 'jumps': 1,\n",
+       " 'over': 1,\n",
+       " 'lazy': 1,\n",
+       " 'dog': 2,\n",
+       " 'was': 1,\n",
+       " 'not': 1,\n",
+       " 'amused': 1}"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "def word_frequency(text):\n",
+    "    word_list=text.split()\n",
+    "    #print(word_list)\n",
+    "    freq_dict={}\n",
+    "\n",
+    "    for word in word_list:\n",
+    "        count=0\n",
+    "        #print(word)\n",
+    "        if word.lower() in freq_dict:\n",
+    "            freq_dict[word.lower()]+=1\n",
+    "        else:\n",
+    "            freq_dict[word.lower()]=1\n",
+    "\n",
+    "    return freq_dict\n",
+    "\n",
+    "\n",
+    "text_block = \"The quick brown fox jumps over the lazy dog The dog was not amused\"   \n",
+    "word_frequency(text_block) \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "d488da58",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "lice\n",
+      "David\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "['David', 'lice']"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "7.\n",
+    "\n",
+    "def find_eligible_students(students_list, required_prerequisites):\n",
+    "\n",
+    "    eligible_students=[]\n",
+    "\n",
+    "    for student in students_list:\n",
+    "        #print(sorted(student['completed_courses']))\n",
+    "        #\n",
+    "        # print(student['status'])\n",
+    "        #print(sorted(required_prerequisites))\n",
+    "        if (student['gpa']>=3.5 and student['status']!='On Probation' and all(course in student['completed_courses'] for course in required_prerequisites)):\n",
+    "            print(student['name'])\n",
+    "            eligible_students.append(student['name'])\n",
+    "\n",
+    "    return sorted(eligible_students)\n",
+    "\n",
+    "students = [\n",
+    "    {\n",
+    "        'name': 'lice',\n",
+    "        'gpa': 3.8,\n",
+    "        'status': 'Good Standing',\n",
+    "        'completed_courses': {'CS101', 'MA101', 'EN101', 'CS201'}\n",
+    "    },\n",
+    "    {\n",
+    "        'name': 'Bob',\n",
+    "        'gpa': 3.4,\n",
+    "        'status': 'Good Standing',\n",
+    "        'completed_courses': {'CS101', 'MA101', 'PH101', 'CS201'}\n",
+    "    },\n",
+    "    {\n",
+    "        'name': 'Charlie',\n",
+    "        'gpa': 3.9,\n",
+    "        'status': 'Good Standing',\n",
+    "        'completed_courses': {'CS101', 'MA101'}\n",
+    "    },\n",
+    "    {\n",
+    "        'name': 'David',\n",
+    "        'gpa': 4.0,\n",
+    "        'status': 'Good Standing',\n",
+    "        'completed_courses': {'CS101', 'MA101', 'PH101', 'CS201'}\n",
+    "    },\n",
+    "    {\n",
+    "        'name': 'Eve',\n",
+    "        'gpa': 3.7,\n",
+    "        'status': 'On Probation',\n",
+    "        'completed_courses': {'CS101', 'MA101', 'CS201'}\n",
+    "    }\n",
+    "]\n",
+    "\n",
+    "advanced_course_reqs = {'CS101', 'MA101', 'CS201'}\n",
+    "find_eligible_students(students,advanced_course_reqs)"
+   ]
   }
  ],
  "metadata": {
