--- a/assignment_file_exception.ipynb
+++ b/assignment_file_exception.ipynb
@@ -1,31 +1,436 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "61dcda57",
+   "metadata": {},
+   "source": [
+    "\n",
+    "############ Question 1: User Profile Processor\n",
+    "\n",
+    "#### Problem Statement\n",
+    "Write a Python function `process_user_data(input_filename, output_filename)` that reads from `input_filename`. Each line in this file will contain a user’s name and their year of birth, separated by a comma (e.g., `Alice,1995`). Your function must:\n",
+    "\n",
+    "- Read each line from the input file.\n",
+    "- For each line, extract the name and year of birth.\n",
+    "- Calculate the user’s age based on the current year (assume the current year is **2024**).\n",
+    "- Write the name and age to the output file in the format: \n",
+    "\n",
+    "##### Handle these possible failures:\n",
+    "- **FileNotFoundError**: If the input file does not exist, write `Error: Input file not found` to the output file.\n",
+    "- **ValueError**: If a parsing error occurs in a line (e.g., the structure is wrong or year is invalid), skip the malformed line and continue processing others.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "#### Constraints\n",
+    "- The current year is fixed at **2024**.\n",
+    "- Input filename and output filename are strings.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "#### Sample Input (`users.txt`)\n",
+    "\n",
+    "- Alice,1995\n",
+    "- Bob,2001\n",
+    "- Charlie\n",
+    "- David,1980\n",
+    "- Eve,nineteen-ninety\n",
+    "\n",
+    "---\n",
+    "\n",
+    "#### Expected Output (`report.txt` after calling `process_user_data('users.txt', 'report.txt')`)\n",
+    "\n",
+    "- Name: Alice, Age: 29\n",
+    "- Name: Bob, Age: 23\n",
+    "- Name: David, Age: 44\n",
+    "\n",
+    "---\n",
+    "\n",
+    "#### Step-by-Step Instructions\n",
+    "1. Define the function `process_user_data` with parameters `input_filename` and `output_filename`.\n",
+    "2. Use a `try` block to attempt opening the input file for reading and the output file for writing using `with` statements.\n",
+    "3. Inside the loop:\n",
+    "   - Read each line from the input file.\n",
+    "   - Split by comma.\n",
+    "   - Validate that there are exactly two parts.\n",
+    "   - Convert the second part to an integer for the birth year.\n",
+    "   - Calculate the age.\n",
+    "4. If `ValueError` occurs due to invalid data format, skip the line and continue.\n",
+    "5. Catch `FileNotFoundError` exception and write the error message to the output file.\n",
+    "6. Test your function with the sample input to ensure it produces the expected output and handles errors correctly.\n",
+    "\n",
+    "---\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "033938c0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def process_user_input(input_filename,output_filename):\n",
+    "    \n",
+    "    try:\n",
+    "        with open(input_filename,'r') as lines:\n",
+    "            \n",
+    "            for line in lines:\n",
+    "                l=line.strip().split(',')\n",
+    "                if (len(l)!=2):\n",
+    "                    continue\n",
+    "                name=l[0]\n",
+    "                try:\n",
+    "                    yob=l[1]\n",
+    "                    age=2024-int(yob)\n",
+    "                except ValueError:\n",
+    "                    continue\n",
+    "                with open(output_filename,'a') as m:\n",
+    "                    m.write(f\"Name: {name}, Age: {age}\\n\")\n",
+    "\n",
+    "    except FileNotFoundError:\n",
+    "        with open(output_filename,'w') as o:\n",
+    "            o.write('Error: Input file not found')\n",
+    "\n",
+    "#process_user_input(\"fwf.txt\",\"report.txt\")\n",
+    "process_user_input('/workspaces/Python_DE/users.txt','report.txt')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "1db0f451",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Error: Input file not found\n"
+      "/workspaces/Python_DE\n"
      ]
     }
    ],
    "source": [
-    "def process_user_input(input_filename,output_filename):\n",
+    "import os\n",
+    "print(os.getcwd())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "020df59b",
+   "metadata": {},
+   "source": [
+    "#### Question 2: Configuration File Loader\n",
+    "\n",
+    "##### Problem Statement\n",
+    "Implement a function `load_config(filepath)` that reads a configuration file and returns its contents as a dictionary.\n",
+    "\n",
+    "- The configuration file format is **key=value** on each line.\n",
+    "- Ignore empty lines and lines starting with `#` (comments).\n",
+    "- If the file does not exist, return an empty dictionary `{}`.\n",
+    "- If a line does not contain `=`, ignore it as malformed.\n",
+    "- Keys and values should have leading/trailing whitespace stripped.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "##### Constraints\n",
+    "- The separator is always `=`.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "##### Sample Input (`app.conf`)\n",
+    "```python \n",
+    "# Application Settings\n",
+    "host = localhost\n",
+    "port = 8080\n",
+    "\n",
+    "debug_mode = true\n",
+    "invalid_line\n",
+    "database_url=postgres://user:pass@host:5432/db\n",
+    "\n",
+    "\n",
+    "---\n",
+    "\n",
+    "##### Expected Output\n",
+    "```python\n",
+    "{\n",
+    "    'host': 'localhost',\n",
+    "    'port': '8080',\n",
+    "    'debug_mode': 'true',\n",
+    "    'database_url': 'postgres://user:pass@host:5432/db'\n",
+    "}\n",
+    "\n",
+    "Steps:\n",
+    "\n",
+    "- Define load_config(filepath).\n",
+    "- Initialize an empty dictionary.\n",
+    "- Use try block to open file with with statement.\n",
+    "- Loop through lines:\n",
+    "- \n",
+    "- Strip whitespace.\n",
+    "- Skip if empty or starts with #.\n",
+    "- Check if = exists; if yes, split on first = (line.split('=', 1)).\n",
+    "- Strip whitespace from key and value, add to dictionary.\n",
+    "- \n",
+    "- \n",
+    "- Ignore malformed lines.\n",
+    "- If FileNotFoundError, return {}.\n",
+    "- Return dictionary at end.\n",
+    "- Test with sample input.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "9424428e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'host ': ' localhost', 'port ': ' 8080', 'debug_mode ': ' true', 'database_url': 'postgres://user:pass@host:5432/db'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "def load_config(filepath):\n",
+    "    config={}\n",
     "    try:\n",
-    "        with open('input_filename','r') as f:\n",
-    "            lines=f.readline()\n",
-    "            print(type(lines))\n",
-    "\n",
+    "        with open(filepath,'r') as lines:\n",
+    "            for line in lines:\n",
+    "                if line =='' or line[0]=='#':\n",
+    "                    continue\n",
+    "                else:\n",
+    "                    if '=' in line:\n",
+    "                        l=line.strip().split('=',1)\n",
+    "                        config[l[0]]=l[1]\n",
+    "                    else:\n",
+    "                        continue\n",
+    "        #print(config)\n",
+    "        return config\n",
     "    except FileNotFoundError:\n",
-    "        print('Error: Input file not found')\n",
+    "        return {}\n",
+    "    \n",
+    "print(load_config('app.conf'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "861d55a8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(load_config('app1.conf'))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dddcb222",
+   "metadata": {},
+   "source": [
+    "#### Question 3: Student Grades Aggregator\n",
     "\n",
-    "#process_user_input(\"fwf.txt\",\"report.txt\")\n",
-    "process_user_input('users.txt','report.txt')"
+    "##### Problem Statement\n",
+    "Write a function `calculate_averages(input_path, output_path)` that reads student scores from a file. Each line in the file contains a student's name followed by a series of comma-separated integer scores (e.g., `John, 100,90,85`). Your function must:\n",
+    "\n",
+    "- Read the input file line by line.\n",
+    "- For each student, calculate their average score.\n",
+    "- Write the results to the output file, with each line in the format:  \n",
+    "  `[StudentName]: [AverageScore]`  \n",
+    "  The average score should be formatted to two decimal places.\n",
+    "\n",
+    "Handle `FileNotFoundError` by creating the output file and writing the single line `\"Source file not found\"` into it.  \n",
+    "Ignore invalid scores by skipping that specific score but still calculating the average of the valid scores for that student. If a student has no valid scores, their average should be `0.00`.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "##### Constraints\n",
+    "- Student names will not contain commas.\n",
+    "- Scores are intended to be integers.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "##### Sample Input (`scores.txt`)\n",
+    "\n",
+    "- Peter,88,92,100\n",
+    "- Jane,95,abc,85,90\n",
+    "- Mike,70\n",
+    "- Liz,,80\n",
+    "\n",
+    "\n",
+    "\n",
+    "##### Expected Output (`averages.txt`)\n",
+    "\n",
+    "- Peter: 93.33\n",
+    "- Jane: 90.00\n",
+    "- Mike: 70.00\n",
+    "- Liz: 80.00\n",
+    "\n",
+    "---\n",
+    "\n",
+    "##### Steps:\n",
+    "1. Define the function `calculate_averages` with parameters `input_path` and `output_path`.\n",
+    "2. Use a `try` block to open the input file for reading and the output file for writing with `with` statements.\n",
+    "3. For each line in the input file:\n",
+    "   - Split the line into name and scores.\n",
+    "   - Convert scores to integers where possible, ignoring invalid entries.\n",
+    "4. If there are valid scores, calculate the average to two decimal places; otherwise, use `0.00`.\n",
+    "5. Write the result to the output file in the format `Name: AverageScore`.\n",
+    "6. Handle `FileNotFoundError` by writing `\"Source file not found\"` to the output file.\n",
+    "7. Return nothing at the end.\n",
+    "8. Test with the sample input to ensure the output matches the expected content."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "a0b1ab49",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def calculate_averages(input_path,output_path):\n",
+    "    try:\n",
+    "        with open(input_path,'r') as i , open(output_path,'a') as o:\n",
+    "            for line in i:\n",
+    "                l=line.split(',')\n",
+    "                name=l[0]\n",
+    "                sum=0\n",
+    "                count=0\n",
+    "                for num in range(1,len(l)):\n",
+    "                    try:\n",
+    "                        sum+=int(l[num])\n",
+    "                    except ValueError:\n",
+    "                        continue\n",
+    "                avg=sum/(len(l)-1)\n",
+    "                formatted_avg = f\"{avg:.2f}\"\n",
+    "                o.write(f\"{name}: {formatted_avg}\\n\")\n",
+    "                #print(name,':',avg)\n",
+    "    except FileNotFoundError:\n",
+    "        print('Source file not found')\n",
+    "\n",
+    "calculate_averages('scores.txt','averages.txt')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5c356688",
+   "metadata": {},
+   "source": [
+    "\n",
+    "#### Question 4: Robust Log File Analyzer\n",
+    "\n",
+    "##### Problem Statement\n",
+    "Design and implement a Python function `analyze_log(log_path, error_log_path)` that processes a log file. Each valid line in the log file follows the format:  \n",
+    "`LEVEL:MESSAGE`, where `LEVEL` is one of `INFO`, `WARNING`, or `ERROR`.  \n",
+    "Your function must perform the following actions:\n",
+    "\n",
+    "- Read `log_path` line by line (use `with` to ensure proper handling).\n",
+    "- Count the occurrences of each log level while ignoring lines that do not match the expected format.\n",
+    "- Create a dictionary with counts for `INFO`, `WARNING`, and `ERROR`.\n",
+    "- Identify any lines that do not conform to the `LEVEL:MESSAGE` format. These are considered \"malformed\".\n",
+    "- Write malformed lines to a separate file specified by `error_log_path`. Each malformed line should be prefixed with `\"MALFORMED: \"`.\n",
+    "- Return the dictionary with counts of valid log levels.\n",
+    "\n",
+    "The entire operation must be wrapped in exception handling. If the input `log_path` does not exist, the function should catch the `FileNotFoundError` and return `None`.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "##### Constraints\n",
+    "- The log file is always text (.txt).\n",
+    "- The function should not crash on malformed lines.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "##### Sample Input (`application.log`)\n",
+    "``\n",
+    "INFO::User logged in successfully\n",
+    "WARNING::Disk space is running low\n",
+    "ERROR::Database connection failed\n",
+    "This is a malformed line.\n",
+    "INFO::Request processed in 20ms\n",
+    "ERROR::Null pointer exception at module X\n",
+    "WARNING::API rate limit approaching\n",
+    "ERROR::\n",
+    "INFO::User logged out\n",
+    "\n",
+    "---\n",
+    "\n",
+    "##### Expected Output (Return Value)\n",
+    "\n",
+    "{\n",
+    "    'log_counts': {'INFO': 3, 'WARNING': 2, 'ERROR': 3},\n",
+    "    'malformed_lines': 1\n",
+    "}\n",
+    "\n",
+    "\n",
+    "---\n",
+    "\n",
+    "##### Expected Content of `error_log.txt`\n",
+    "\n",
+    "MALFORMED: This is a malformed line.\n",
+    "\n",
+    "\n",
+    "---\n",
+    "\n",
+    "##### Step-by-Step Instructions\n",
+    "1. Define the function `analyze_log` with parameters `log_path` and `error_log_path`.\n",
+    "2. Use a `try` block to open the input log file for reading.\n",
+    "3. Initialize counters for `INFO`, `WARNING`, and `ERROR`.\n",
+    "4. Loop through each line:\n",
+    "   - Strip whitespace.\n",
+    "   - Check if the line contains a valid format (`LEVEL:MESSAGE`).\n",
+    "   - If valid, increment the corresponding counter.\n",
+    "   - If invalid, write the line to `error_log_path` prefixed with `\"MALFORMED: \"`.\n",
+    "5. After processing, return a dictionary with counts and malformed line count.\n",
+    "6. Handle `FileNotFoundError` by returning `None`.\n",
+    "7. Test with the sample input to ensure correctness."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "923479f6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def analyze_log(log_file_path, error_log_path):\n",
+    "    try:\n",
+    "        with open(log_file_path,'r') as lines, open(error_log_path,'a') as out :\n",
+    "            info_count,warn_count,err_count,mal_count=0,0,0,0\n",
+    "            dict={}\n",
+    "            for line in lines:\n",
+    "                l=line.strip()\n",
+    "                print(l)\n",
+    "                if '::' in l:\n",
+    "                    type=l.split('::')[0]\n",
+    "                    print(type)\n",
+    "                    if type=='INFO': info_count+=1\n",
+    "                    elif type=='WARNING': warn_count+=1\n",
+    "                    elif type=='ERROR': err_count+=1\n",
+    "                    else:\n",
+    "                        mal_count+=1\n",
+    "                        out.write(f\"MALFORMED: {l}\")\n",
+    "\n",
+    "                else:\n",
+    "                    mal_count+=1\n",
+    "                    out.write(f\"MALFORMED: {l}\")\n",
+    "\n",
+    "            dict['log_counts']=f'INFO:{info_count} ,WARNING:{warn_count}, ERROR: {err_count}'\n",
+    "            dict['malformed_lines']=mal_count\n",
+    "            return dict\n",
+    "    except FileNotFoundError:\n",
+    "        return None\n",
+    "    \n",
+    "    print(analyze_log('application.log','error_log.log'))"
    ]
   }
  ],
