--- a/assignment_file_exception.ipynb
+++ b/assignment_file_exception.ipynb
@@ -397,22 +397,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "923479f6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'log_counts': {'INFO': 3, 'WARNING': 2, 'ERROR': 3}, 'malformed_lines': 1}"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def analyze_log(log_file_path, error_log_path):\n",
     "    try:\n",
     "        with open(log_file_path,'r') as lines, open(error_log_path,'a') as out :\n",
     "            info_count,warn_count,err_count,mal_count=0,0,0,0\n",
     "            dict={}\n",
+    "            dicttype={}\n",
     "            for line in lines:\n",
     "                l=line.strip()\n",
-    "                print(l)\n",
+    "                \n",
     "                if '::' in l:\n",
     "                    type=l.split('::')[0]\n",
-    "                    print(type)\n",
+    "                    \n",
     "                    if type=='INFO': info_count+=1\n",
     "                    elif type=='WARNING': warn_count+=1\n",
     "                    elif type=='ERROR': err_count+=1\n",
@@ -424,13 +436,19 @@
     "                    mal_count+=1\n",
     "                    out.write(f\"MALFORMED: {l}\")\n",
     "\n",
-    "            dict['log_counts']=f'INFO:{info_count} ,WARNING:{warn_count}, ERROR: {err_count}'\n",
+    "            dicttype['INFO']=info_count\n",
+    "            dicttype['WARNING']=warn_count\n",
+    "            dicttype['ERROR']=err_count\n",
+    "            dict['log_counts']=dicttype\n",
     "            dict['malformed_lines']=mal_count\n",
+    "            \n",
     "            return dict\n",
+    "        \n",
     "    except FileNotFoundError:\n",
+    "        print(log_file_path)\n",
     "        return None\n",
     "    \n",
-    "    print(analyze_log('application.log','error_log.log'))"
+    "analyze_log('application.log','malformed.log')"
    ]
   }
  ],
