--- a/assignment_pythonmodule_package.ipynb
+++ b/assignment_pythonmodule_package.ipynb
@@ -328,7 +328,18 @@
     "- All code must be production-ready with proper error handling.\n",
     "- Use relative imports within the package (e.g., `from .analyzer import analyze_column`).\n",
     "- Include docstrings for all functions and modules.\n",
-    "- The package must be installable and executable from anywhere after installation."
+    "- The package must be installable and executable from anywhere after installation.\n",
+    "\n",
+    "\n",
+    "project-root/\n",
+    "│\n",
+    "├── setup.py\n",
+    "├── requirements.txt\n",
+    "├── data.csv\n",
+    "└── csvstats/\n",
+    "    ├── __init__.py\n",
+    "    ├── analyzer.py\n",
+    "    └── cli.py"
    ]
   },
   {
